<resources>
    <string name="app_name">LoginTest</string>
    <string name="button_close">关闭</string>
    <string name="button_login_1">登录</string>
    <string name="button_login">登  录</string>
    <string name="tv_login">登录</string>
    <string name="tv_register">注册</string>
    <string name="tv_resetPass">重置密码</string>
    <string name="button_register_1">注册</string>
    <string name="button_register">注  册</string>
    <string name="button_verification">获取验证码</string>
    <string name="button_verification_2">秒后获取</string>
    <string name="button_resetPass">确认更改</string>
    <string name="et_phone_hint">请输入手机号</string>
    <string name="et_password_hint">请输入密码</string>
    <string name="et_newPass_hint">请输入新的密码</string>
    <string name="eb_rememberPassword">记住密码</string>
    <string name="wrong">错误</string>
    <string name="please_input_phone">请输入正确的手机号码</string>
    <string name="please_input_password">
        请输入正确格式的密码，密码由6到12位大小写字母、数字以及下划线“_”组成</string>
    <string name="verification_wrong">验证失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="resetPass_success">密码重置成功</string>
    <string name="resetPass_fail">密码重置失败</string>
    <string name="log_out">退出当前登录</string>
    <string name="title_activity_f">FActivity</string>
    <string name="find_worker">找护工</string>
    <string name="find_employer">找雇主</string>
    <string name="home">主页</string>
    <string name="explore">浏览</string>
    <string name="me">我的</string>
    <string name="loading">正在加载...</string>
    <string name="level">级别</string>
    <string name="workerAge">年龄</string>
    <string name="workerDistance">距离</string>
    <string name="location">地点</string>
    <string name="situation">病人情况</string>
    <string name="authentication">验证身份</string>
    <string name="take_identity_photo_1">拍摄身份证照片（正）</string>
    <string name="take_identity_photo_2">拍摄身份证照片（反）</string>
    <string name="upload">上 传</string>
    <string name="upload_identity">上传身份证</string>
    <string name="notice_identity_1">点击拍摄身份证正面</string>
    <string name="notice_identity_2">点击拍摄身份证背面</string>
    <string name="notice_identity_3">请确保拍摄时身份证不被遮挡以及照片的清晰度</string>
    <string name="work_date">服务日期</string>
    <string name="to">至</string>
    <string name="et_truename_hint">请输入您的真实姓名</string>
    <string name="et_identitynumber_hint">请输入您的身份证号码</string>
    <string name="me_my_post">我的招聘/求职信息</string>
    <string name="me_my_info">个人信息</string>
    <string name="me_setting">设置</string>
    <string name="me_feedback">反馈</string>
    <string name="me_about">关于我们</string>
    <string name="save">保存</string>
    <string name="nickname">昵称</string>
    <string name="change_head">点击更换头像</string>
    <string name="birthday">生日</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="area">所在地区</string>
    <string name="specific_address">详细地址</string>
    <string name="please_enter">请输入...</string>
    <string name="set_name">设置昵称</string>
    <string name="confirm">确认</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="check_version">检查版本</string>
    <string name="copyright">版权所有</string>
    <string name="technical">技术支持</string>
    <string name="version">版本更新</string>
    <string name="share">分 享</string>
    <string name="circle_friends">朋友圈</string>
    <string name="wechat">微信</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="cancel">取消</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_me">MeActivity</string>
    <string name="url">URL:</string>
    <string name="take_photo">拍 照</string>
    <string name="choose_form_album">从相册选择</string>
    <string name="basic_information">基本资料</string>
    <string name="name">姓名</string>
    <string name="address_now">现居地址</string>
    <string name="skills">专业技能</string>
    <string name="work_time">工作时间</string>
    <string name="whether_containing_meal">是否含餐</string>
    <string name="whether_the_accommodation">是否住家</string>
    <string name="self_introduction">自我介绍</string>
    <string name="price_service">服务价格</string>
    <string name="price_unit">元/小时</string>
    <string name="confirm_post">确认发布</string>
    <string name="date_service">服务日期</string>
    <string name="time_service">服务时间</string>
    <string name="to_">至</string>
    <string name="work_location">工作地点</string>
    <string name="hospital">医院</string>
    <string name="work_at_home">居家</string>
    <string name="patient_situation">病人情况</string>
    <string name="please_choose">请选择</string>
    <string name="employer_name">雇主称呼</string>
    <string name="employer_note">雇主备注</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="personal_home_page">个人主页</string>
    <string name="annum">岁</string>
    <string name="leave_message">留 言</string>
    <string name="telephone_contact">电话联系</string>
    <string name="details">详情</string>
    <string name="specific_info">详细信息</string>
    <string name="limit_400_fonts">最多400字</string>
    <string name="test">测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试
        测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试
    </string>


</resources>
