<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <Button
        android:id="@+id/bt_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/authentication"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_log_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/log_out"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/bt_start_download"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/start"
        android:textColor="@color/black_000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/bt_pause_download"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_url"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/bt_pause_download"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/pause"
        android:textSize="16sp"
        android:textColor="@color/black_000000"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toTopOf="@+id/bt_start_download"
        app:layout_constraintBottom_toBottomOf="@+id/bt_start_download"
        app:layout_constraintStart_toEndOf="@+id/bt_start_download"
        app:layout_constraintEnd_toStartOf="@+id/bt_cancel_download"/>

    <Button
        android:id="@+id/bt_cancel_download"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textColor="@color/black_000000"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toTopOf="@+id/bt_pause_download"
        app:layout_constraintBottom_toBottomOf="@+id/bt_pause_download"
        app:layout_constraintStart_toEndOf="@+id/bt_pause_download"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/url"
        android:textColor="@color/black_000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black_000000"
        android:textSize="14sp"
        android:maxLines="3"
        app:layout_constraintStart_toEndOf="@+id/tv_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_test"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="Test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>