<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:background="@color/white_ffffff">

    <TextView
        android:id="@+id/tv_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textColor="@color/black_000000"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_man"
        app:layout_constraintEnd_toEndOf="@+id/tv_man"
        app:layout_constraintStart_toStartOf="@+id/tv_man"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_man"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="14dp"
        android:text="@string/man"
        android:textColor="@color/black_000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/view_line"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@color/grey_bababa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_woman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="14dp"
        android:text="@string/woman"
        android:textColor="@color/black_000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_line" />

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/confirm"
        android:textColor="@color/black_000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_sex" />

    <RadioGroup
        android:id="@+id/rg_sex"
        android:layout_width="0dp"
        android:layout_height="103dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_line"
        app:layout_constraintVertical_bias="0.504">

        <RadioButton
            android:id="@+id/rb_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>